# NEH-algorithm-for-flowshop-scheduling-problems

./: .gitignore  CMakeLists.txt  README.md
data/: neh.zasady.txt
inc/: helpers.hh  job.hh  job_algorithms.hh
src/: helpers.cpp  job.cpp  job_algorithms.cpp  main.cpp
